clusters/manifests/application/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice-deployment
  namespace: microservice
  labels:
    app: microservice
  annotations:
    fluxcd.io/automated: "true"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: microservice
  template:
    metadata:
      labels:
        app: microservice
    spec:
      serviceAccountName: microservice-sa  # Attach the ServiceAccount to the pod - Needs to match terraform k8s-microservice-deployment.tf
      containers:
        - name: microservice
          image: acrautomaticfortnight.azurecr.io/microservice:latest
          ports:
            - containerPort: 3000

          # Liveness Probe
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3

          # Readiness Probe
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 3

          # Resource Limits
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
