clusters/manifests/application/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: microservice-service
  namespace: microservice
spec:
  selector:
    app: microservice
  ports:
    - protocol: TCP
      port: 80        # Service port
      targetPort: 3000  # Container port
  type: ClusterIP
